package br.edu.ifpi.catce.sistemaachadoseperdidos.model;

public enum TipoDocumento {
    CPF,
    RG,
    CNH,
    OUTRO
}
